recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: identifier expected but ')' found.
override def run() { avance(100.)
                                ^